[gd_scene load_steps=22 format=2]

[ext_resource path="res://nodes/entity/Enemies/EntityEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/enemies/spr_enemy_spherecopters.png" type="Texture" id=2]
[ext_resource path="res://scripts/entity/Enemy/EntityEnemy_SphereCopter.gd" type="Script" id=3]
[ext_resource path="res://nodes/particles/robot_part_explosion/par_spherecopter_parts_exp.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=29]
code = "shader_type canvas_item;

uniform float color_palette_modifier : hint_range(0.0, 1.0) = 0.0;

uniform int numberOfColors : hint_range(1, 3);
uniform vec4 C1 : hint_color;
uniform vec4 C2 : hint_color;
uniform vec4 C3 : hint_color;


void fragment(){
	vec4 referenceColors[12];
	referenceColors[0] = C1;
	referenceColors[1] = C2;
	referenceColors[2] = C3;

	
	vec4 textureColor = texture(TEXTURE, UV);
	

	COLOR.rgb = mix(textureColor.rgb,referenceColors[int(floor(textureColor.r * float(numberOfColors)))].rgb,color_palette_modifier);
	COLOR.a = textureColor.a;

}"

[sub_resource type="ShaderMaterial" id=30]
resource_local_to_scene = true
shader = SubResource( 29 )
shader_param/color_palette_modifier = 0.0
shader_param/numberOfColors = 3
shader_param/C1 = Color( 0.34552, 0.796875, 0.766275, 1 )
shader_param/C2 = Color( 0.556863, 0.901961, 0.878431, 1 )
shader_param/C3 = Color( 0.803922, 0.945098, 1, 1 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 52, 46 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 52, 46 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 43 ) ],
"loop": false,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 46, 52, 46 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 52, 46, 52, 46 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 104, 46, 52, 46 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 0, 92, 52, 46 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 52, 92, 52, 46 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 104, 92, 52, 46 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 156, 92, 52, 46 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 20.5, 17 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 20, 17.5 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 20.5, 17.5 )

[node name="EntityEnemy_SphereCopter" instance=ExtResource( 1 )]
script = ExtResource( 3 )
hp_max = 9
gravityenabled = false
piece_explosion = ExtResource( 4 )
Dna_id_2 = 3
enemy_reaction_time = 0.85

[node name="Sprite" parent="." index="0"]
material = SubResource( 30 )
frames = SubResource( 34 )
frame = 1
playing = true

[node name="HealthBar" parent="Sprite" index="0"]
visible = false

[node name="Cannon_Sprites" type="AnimatedSprite" parent="Sprite" index="1"]
use_parent_material = true
frames = SubResource( 49 )

[node name="Helicopter_Sprite" type="AnimatedSprite" parent="Sprite" index="2"]
use_parent_material = true
frames = SubResource( 48 )
frame = 1
playing = true

[node name="CenterPoint" parent="Sprite" index="3"]
position = Vector2( 3, 5 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 4.5, 4 )
shape = SubResource( 37 )

[node name="Hurtbox" parent="." index="4"]
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 4, 4.5 )
shape = SubResource( 36 )

[node name="Hitbox" parent="." index="5"]
damage = 3

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 4.5, 4.5 )
shape = SubResource( 35 )

[node name="shot_cooldown_timer" type="Timer" parent="." index="8"]
process_mode = 0
wait_time = 0.133
one_shot = true

[connection signal="timeout" from="reaction_time" to="." method="_on_reaction_time_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
